@@ -1180,6 +1180,7 @@ WF_DEFAULT_PREFIX=[correspondance]
 WF_OPTION_ALLOW_TRANS_EQ_TO_SRC=&Autoriser une traduction identique \u00e0 la source
 WF_OPTION_EXPORT__CURRENT_SEGMENT=E&xporter le segment dans des fichiers texte
 WF_OPTION_GOTO_NEXT_UNTRANSLATED=\u00ab\u00a0Atteindre segment non &traduit suivant\u00a0\u00bb s'arr\u00eate lorsqu'il y a au moins une traduction alternative
+WF_OPTION_CONVERT_NUMBERS=Essayer de convertir les &nombres lors de l'insertion d'une correspondance
 
 # org.omegat.gui.dialogs.ExternalTMXMatchesDialog.java
 EXT_TMX_TITLE=Options des TMX externes
